<resources>
    <string name="app_name">AnectoDus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="account">Account</string>
    <string name="publish">Опубликовать</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_page">Home</string>
    <string name="add_more">Add more</string>

    <string name="login_error">login error</string>
    <string name="password_error">password error</string>
    <string name="password">password</string>
    <string name="check_password">password</string>
    <string name="username">login</string>
    <string name="email">email</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="password_error_same">password_error_same</string>
    <string name="user_name_error">user_name_error</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Account Preferences -->
    <string name="LogOut">LogOut</string>
    <string name="LogOutFromAccount">LogOut from account</string>

</resources>