<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".presentation.fragment.RegisterFragment">

        <com.example.anectodus.presentation.customView.auth.UserNameInput
            android:id="@+id/sign_up_username"
            style="@style/Theme.AppCompat.DayNight.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:hint="@string/username"
            android:inputType="text"
            app:endIconDrawable="@drawable/clear"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text" />

        </com.example.anectodus.presentation.customView.auth.UserNameInput>

        <com.example.anectodus.presentation.customView.auth.MailInput
            android:id="@+id/sign_up_email"
            style="@style/Theme.AppCompat.DayNight.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/email"
            android:inputType="text"
            app:endIconDrawable="@drawable/clear"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.example.anectodus.presentation.customView.auth.MailInput>

        <com.example.anectodus.presentation.customView.PasswordLayout
            android:id="@+id/sign_up_password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <Button
            android:id="@+id/start_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_bar_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>